# swiftward-ai-trading-agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.trading-server  LICENSE  Makefile  README.md  ai.code-workspace  compose.yaml  otel-collector-config.yaml
python/: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
python/config/: config.example.yaml
python/docs/: brain.md  requirements.md
python/src/agent/: main.py
python/src/agent/brain/: base.py  deterministic_llm.py  errors.py  factory.py  llm_client.py  stub.py
python/src/agent/infra/: _mcp_client.py  news_mcp.py  (+6 more)
python/src/common/: cache.py  config.py  create_wallet.py  exceptions.py  log.py  mcp_client.py
python/src/fear_greed_mcp/: server.py
python/src/news_mcp/: server.py
python/src/onchain_data_mcp/: server.py
python/src/price_feed_mcp/: server.py
python/src/trading_mcp/: server.py
python/tests/common/: test_config.py  test_log.py  test_models.py
python/tests/fear_greed_mcp/: test_alternative_me.py  test_service.py
python/tests/fixtures/: config_valid.yaml
python/tests/news_mcp/: test_coindesk.py  test_cryptopanic.py  test_llm.py  test_service.py
python/tests/onchain_data_mcp/: test_onchain_data_model.py  test_service.py
python/tests/price_feed_mcp/: test_binance.py  test_cache.py  test_server.py  test_service.py
python/tests/trading_mcp/: test_erc8004_ipfs.py  test_erc8004_registry.py  test_live_engine.py  test_paper_engine.py  test_portfolio_service.py  test_price_client.py  test_schema.py  test_server.py
rust/: Cargo.toml  Dockerfile  README.md
rust/src/: lib.rs
rust/src/agents/: mod.rs
rust/src/config/: mod.rs
rust/src/mcp/: client.rs  types.rs
rust/src/platform/: mod.rs
(+880 files in other folders)
